--- a/app/src/main/res/layout/genre_item.xml
+++ b/app/src/main/res/layout/genre_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/genre_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sf_pro_text_medium"
